# django-rq-scheduler

./: .gitignore  README.md  create_setup.py  pyproject.toml  setup.py
.github/workflows/: shiftleft.yml
scheduler/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py
testproject/testproject/: settings.py  wsgi.py
