[tool.poetry]
name = "django-rq-scheduler-2"
version = "0.1.0"
description = "Provides an admin for using `rq-scheduler` with `Django`."
authors = ["Chad Shryock <chad@keystone.works>"]
maintainers = ["Adam Hill <ahill@fool.com>"]
license = "MIT"
packages = [
    { include = "scheduler" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.0"
django-model-utils = ">=2.4.0"
django-rq = ">=0.9.3"
rq-scheduler = ">=0.6.0"
pytz = ">=2015.7"
croniter = ">=0.3.24"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
pytest = "^5.4.3"
factory_boy = ">=2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
